--- a/public/compras.html
+++ b/public/compras.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Compras - Inventario</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 20px; text-align: center; }
-    h2 { margin-bottom: 20px; }
-    table { width: 100%; margin: auto; border-collapse: collapse; font-size: 14px; }
-    th, td { border: 1px solid #ccc; padding: 8px; text-align: center; }
-    th { background-color: #f2f2f2; cursor: pointer; }
-    input[type="date"] { padding: 6px; margin-bottom: 15px; font-size: 14px; }
-    .mensaje { margin: 10px; font-size: 14px; color: red; }
-    .footer { margin-top: 30px; font-size: 12px; color: gray; }
-    @media (max-width: 600px) {
-      table { font-size: 12px; }
-      th, td { padding: 4px; }
-      input[type="date"] { width: 90%; }
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Compras - Inventario</title>
+<style>
+  body { font-family: Arial, sans-serif; margin: 20px; text-align: center; }
+  h2 { margin-bottom: 20px; }
+  table { width: 100%; margin: auto; border-collapse: collapse; font-size: 14px; }
+  th, td { border: 1px solid #ccc; padding: 8px; text-align: center; }
+  th { background-color: #f2f2f2; cursor: pointer; }
+  input[type="date"], button { padding: 8px; margin: 10px; font-size: 14px; border-radius: 5px; border: 1px solid #ccc; }
+  button { background-color: #e74c3c; color: white; cursor: pointer; border: none; }
+  button:hover { background-color: #c0392b; }
+  .footer { margin-top: 30px; font-size: 12px; color: gray; }
+  @media (max-width: 600px) {
+    table { font-size: 12px; }
+    th, td { padding: 4px; }
+    input[type="date"], button { width: 90%; }
+  }
+</style>
 </head>
 <body>
 
@@ -25,6 +27,8 @@
 
 <input type="date" id="filtroFecha">
 <button onclick="filtrarFecha()">Filtrar</button>
+<button onclick="exportarPDF()">Exportar PDF</button>
+<button onclick="regresar()">Regresar</button>
 
 <div class="mensaje" id="mensaje"></div>
 
@@ -38,6 +42,7 @@
       <th onclick="ordenarTabla(4)">Artículo</th>
       <th onclick="ordenarTabla(5)">Cantidad</th>
       <th onclick="ordenarTabla(6)">Solicitó</th>
+      <th onclick="ordenarTabla(7)">Ayer</th>
     </tr>
   </thead>
   <tbody id="tbody-compras"></tbody>
@@ -47,6 +52,7 @@
   Aplicación para administración de inventarios para PYMES — Alejandro Ornelas Orom Soluciones
 </div>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <script>
 const server = "https://inventario-horom-production.up.railway.app";
 let datosGlobal = [];
@@ -56,23 +62,44 @@ async function cargarDatos() {
     const res = await fetch(`${server}/nombres`);
     const inventarios = await res.json();
     datosGlobal = [];
+    const inventariosPorFecha = {};
 
     inventarios.forEach(inv => {
-      const fecha = new Date(inv.creadoEn).toLocaleDateString("es-MX", { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' });
-      for (const [articulo, cantidadSolicito] of Object.entries(inv.articulos || {})) {
-        const [cantidad, solicitoParte] = cantidadSolicito.split('|').map(x => x.trim());
-        const solicito = solicitoParte?.replace('Solicito:', '').trim() || "No";
-        datosGlobal.push({
-          fecha,
-          usuario: inv.nombre,
-          ubicacion: inv.ubicacion,
-          area: inv.area,
-          articulo,
-          cantidad,
-          solicito
-        });
-      }
+      const fechaISO = new Date(inv.creadoEn);
+      const fecha = fechaISO.toISOString().split('T')[0];
+      if (!inventariosPorFecha[fecha]) inventariosPorFecha[fecha] = [];
+      inventariosPorFecha[fecha].push(inv);
     });
+
+    for (const fecha in inventariosPorFecha) {
+      inventariosPorFecha[fecha].forEach(inv => {
+        for (const [articulo, cantidadSolicito] of Object.entries(inv.articulos || {})) {
+          const [cantidad, solicitoParte] = cantidadSolicito.split('|').map(x => x.trim());
+          const solicito = solicitoParte?.replace('Solicito:', '').trim() || "No";
+
+          let ayerCantidad = "-";
+          const fechaAyer = new Date(new Date(fecha).getTime() - 86400000).toISOString().split('T')[0];
+          if (inventariosPorFecha[fechaAyer]) {
+            inventariosPorFecha[fechaAyer].forEach(invAyer => {
+              if (invAyer.nombre === inv.nombre && invAyer.ubicacion === inv.ubicacion && invAyer.area === inv.area && invAyer.articulos[articulo]) {
+                ayerCantidad = invAyer.articulos[articulo].split('|')[0].trim();
+              }
+            });
+          }
+
+          datosGlobal.push({
+            fecha,
+            usuario: inv.nombre,
+            ubicacion: inv.ubicacion,
+            area: inv.area,
+            articulo,
+            cantidad,
+            solicito,
+            ayer: ayerCantidad
+          });
+        }
+      });
+    }
 
     pintarTabla(datosGlobal);
   } catch (error) {
@@ -85,13 +112,6 @@ function pintarTabla(datos) {
   const tbody = document.getElementById("tbody-compras");
   tbody.innerHTML = "";
 
-  if (datos.length === 0) {
-    document.getElementById("mensaje").textContent = "⚠️ No hay datos disponibles.";
-    return;
-  } else {
-    document.getElementById("mensaje").textContent = "";
-  }
-
   datos.forEach(d => {
     const fila = document.createElement("tr");
     fila.innerHTML = `
@@ -102,61 +122,62 @@ function pintarTabla(datos) {
       <td>${d.articulo}</td>
       <td>${d.cantidad}</td>
       <td>${d.solicito}</td>
+      <td>${d.ayer}</td>
     `;
     tbody.appendChild(fila);
   });
 }
 
-function ordenarTabla(n) {
-  const tabla = document.getElementById("tabla-compras");
-  let switching = true;
-  let dir = "asc";
-  let switchcount = 0;
-
-  while (switching) {
-    switching = false;
-    const rows = tabla.rows;
-    for (let i = 1; i < (rows.length - 1); i++) {
-      let debeCambiar = false;
-      const x = rows[i].getElementsByTagName("TD")[n];
-      const y = rows[i + 1].getElementsByTagName("TD")[n];
-
-      if (dir === "asc") {
-        if (x.innerHTML.toLowerCase() > y.innerHTML.toLowerCase()) {
-          debeCambiar = true;
-          break;
-        }
-      } else if (dir === "desc") {
-        if (x.innerHTML.toLowerCase() < y.innerHTML.toLowerCase()) {
-          debeCambiar = true;
-          break;
-        }
-      }
-    }
-    if (debeCambiar) {
-      rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
-      switching = true;
-      switchcount++;
-    } else {
-      if (switchcount === 0 && dir === "asc") {
-        dir = "desc";
-        switching = true;
-      }
-    }
-  }
+function ordenarTabla(columna) {
+  const dir = (ordenarTabla.dir = !ordenarTabla.dir);
+  datosGlobal.sort((a, b) => {
+    const campos = ["fecha", "usuario", "ubicacion", "area", "articulo", "cantidad", "solicito", "ayer"];
+    if (a[campos[columna]] > b[campos[columna]]) return dir ? 1 : -1;
+    if (a[campos[columna]] < b[campos[columna]]) return dir ? -1 : 1;
+    return 0;
+  });
+  pintarTabla(datosGlobal);
 }
 
 function filtrarFecha() {
   const fechaInput = document.getElementById("filtroFecha").value;
-  if (!fechaInput) {
-    pintarTabla(datosGlobal);
-    return;
-  }
+  if (!fechaInput) return pintarTabla(datosGlobal);
 
-  const fechaBuscada = new Date(fechaInput).toLocaleDateString("es-MX", { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' });
-  const datosFiltrados = datosGlobal.filter(d => d.fecha === fechaBuscada);
-
+  const datosFiltrados = datosGlobal.filter(d => d.fecha === fechaInput);
   pintarTabla(datosFiltrados);
+}
+
+function exportarPDF() {
+  const { jsPDF } = window.jspdf;
+  const doc = new jsPDF({ orientation: "landscape" });
+  let y = 20;
+  doc.setFontSize(12);
+
+  doc.text("Reporte de Compras - Inventario", 10, 10);
+  doc.setFontSize(10);
+
+  const encabezado = ["Fecha", "Usuario", "Ubicacion", "Area", "Articulo", "Cantidad", "Solicito", "Ayer"];
+  doc.text(encabezado.join(" | "), 10, y);
+
+  y += 10;
+  datosGlobal.forEach((d, i) => {
+    const texto = `${d.fecha} | ${d.usuario} | ${d.ubicacion} | ${d.area} | ${d.articulo} | ${d.cantidad} | ${d.solicito} | ${d.ayer}`;
+    doc.text(texto, 10, y);
+    y += 8;
+    if (y > 190) {
+      doc.addPage();
+      y = 20;
+    }
+  });
+
+  doc.setFontSize(8);
+  doc.text("Aplicación para administración de inventarios para PYMES — Alejandro Ornelas Orom Soluciones", 10, 200);
+
+  doc.save("compras-inventario.pdf");
+}
+
+function regresar() {
+  window.location.href = "index.html";
 }
 
 cargarDatos();
