--- a/public/index.html
+++ b/public/index.html
@@ -3,87 +3,103 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Inicio - Inventario</title>
+  <title>Menú Principal</title>
   <style>
-    body {font-family: Arial, sans-serif; margin: 0; padding: 20px; text-align: center; background: #f9f9f9;}
-    h2 {font-size: 6vw; margin-bottom: 20px;}
-    .info-usuario {margin-bottom: 20px; font-size: 4vw; color: #333;}
-    button {width: 90%; max-width: 300px; padding: 15px; margin: 10px auto; font-size: 4.5vw; border: none; border-radius: 8px; background: #d32f2f; color: white; display: block;}
-    button:hover {background: #b71c1c;}
-    footer {margin-top: 30px; font-size: 3vw; color: gray;}
-    #loader {display: none; margin-top: 10px; font-size: 3vw; color: #555;}
-    @media(min-width: 600px) {
-      h2 {font-size: 2.5rem;}
-      .info-usuario {font-size: 1.5rem;}
-      button {font-size: 1.2rem;}
-      footer {font-size: 1rem;}
-    }
+    body { font-family: Arial, sans-serif; margin: 30px; text-align: center; }
+    h2 { margin-bottom: 20px; }
+    button { width: 90%; max-width: 300px; padding: 12px; margin: 10px 0; font-size: 16px; border: none; border-radius: 5px; background-color: #d9534f; color: white; cursor: pointer; }
+    button:hover { background-color: #c9302c; }
+    footer { margin-top: 40px; font-size: 12px; color: gray; }
+    #loader { display: none; margin-top: 20px; font-size: 14px; color: #555; }
   </style>
 </head>
 <body>
 
-<h2>Inventario Orom</h2>
-<div class="info-usuario" id="usuario-info">Cargando usuario...</div>
+<h2>Menú Principal</h2>
+
+<div id="loader">Cargando...</div>
 
 <button onclick="irACapturar()">Capturar Inventario</button>
 <button onclick="irAVerInventarios()">Ver Inventarios</button>
 <button onclick="irACompras()">Compras</button>
-<button onclick="irANomina()">Nómina</button>
-<button onclick="irAPrestamos()">Préstamos</button>
-<button onclick="irAHorarios()">Horario</button>
-<button onclick="irAAhorros()">Ahorros</button>
-<button onclick="irAConfiguracion()">Configuración</button>
-<button onclick="cerrarSesion()">Cerrar Sesión</button>
-
-<div id="loader">Cargando...</div>
+<button onclick="cambiarMiContraseña()">Cambiar Mi Contraseña</button>
+<button onclick="accederConfiguracion()">Configuración (Protegida)</button>
 
 <footer>
-  Aplicación para administración de inventarios para PYMES - Alejandro Ornelas - Orom Soluciones
+  Aplicación para administración de inventarios para PYMES — Alejandro Ornelas — Orom Soluciones
 </footer>
 
 <script>
-const server = "https://inventario-horom-production.up.railway.app";
+const SERVER = "https://inventario-horom-production.up.railway.app";
+const SUPERCONTRASEÑA = "Pelon93."; // Puedes cambiarla luego desde config
 
-function validarSesion() {
-  const usuario = localStorage.getItem("usuarioActivo");
-  if (!usuario) {
+// Validar sesión al entrar
+window.onload = function() {
+  const sesion = JSON.parse(localStorage.getItem("sesionUsuario"));
+  if (!sesion || !sesion.usuario) {
+    alert("Debes iniciar sesión.");
     window.location.href = "login.html";
-  } else {
-    document.getElementById("usuario-info").textContent = `Usuario: ${usuario}`;
   }
-}
+};
 
 function irACapturar() {
   window.location.href = "capturar.html";
 }
+
 function irAVerInventarios() {
   window.location.href = "ver-nombres.html";
 }
+
 function irACompras() {
   window.location.href = "compras.html";
 }
-function irANomina() {
-  alert("Módulo de nómina próximamente");
-}
-function irAPrestamos() {
-  alert("Módulo de préstamos próximamente");
-}
-function irAHorarios() {
-  alert("Módulo de horarios próximamente");
-}
-function irAAhorros() {
-  alert("Módulo de ahorros próximamente");
-}
-function irAConfiguracion() {
-  window.location.href = "configuracion.html";
+
+async function cambiarMiContraseña() {
+  const actual = prompt("Introduce tu contraseña actual:");
+  const sesion = JSON.parse(localStorage.getItem("sesionUsuario"));
+
+  if (!actual || actual.trim() === "") return;
+
+  try {
+    const validar = await fetch(`${SERVER}/validar-usuario`, {
+      method: "POST",
+      headers: {"Content-Type": "application/json"},
+      body: JSON.stringify({usuario: sesion.usuario, contraseña: actual})
+    });
+    const data = await validar.json();
+
+    if (!data.valido) {
+      alert("❌ Contraseña incorrecta.");
+      return;
+    }
+
+    const nueva = prompt("Introduce nueva contraseña (mínimo 4 caracteres):");
+    if (!nueva || nueva.length < 4) {
+      alert("❌ Nueva contraseña no válida.");
+      return;
+    }
+
+    await fetch(`${SERVER}/modificar-usuario/${sesion.id}`, {
+      method: "PUT",
+      headers: {"Content-Type": "application/json"},
+      body: JSON.stringify({contraseña: nueva})
+    });
+
+    alert("✅ Contraseña cambiada correctamente.");
+  } catch (error) {
+    console.error(error);
+    alert("❌ Error al cambiar contraseña.");
+  }
 }
 
-function cerrarSesion() {
-  localStorage.removeItem("usuarioActivo");
-  window.location.href = "login.html";
+function accederConfiguracion() {
+  const clave = prompt("Introduce la supercontraseña:");
+  if (clave === SUPERCONTRASEÑA) {
+    window.location.href = "configuracion.html";
+  } else {
+    alert("❌ Supercontraseña incorrecta.");
+  }
 }
-
-validarSesion();
 </script>
 
 </body>
